# kstat

./: .gitignore  README.md  environment.yaml  requirements.txt
R/: compute_signals.R  load_interaction_data.R  plot_interaction.R  save_legend.R  save_plots.R  setup_environment.R  signal_threshold.R  utils.R  visualization.R
config/: config.yaml  mouse_e15.5d.json  mouse_e18.5d.json  mouse_p3d.json
docs/: inference.md  interactions.md  preprocessing.md  tutorial.md  visualization.md
python/: pyproject.toml
python/kstat/: communication.py  evaluation.py  model.py  performance.py  preprocessing.py  probability.py  utils.py
python/kstat/interactions/: driver.py  expression.py  transport.py
python/kstat/tests/: test_expression.py  test_transport.py
python/scripts/: algorithm_illustration.py  cell_segmentation.py  create_cellphonedb.py  kstat.py  mouse_e18.5d_ligand_receptor.py  preprocessing.py  run_evaluation.py  run_inference.py  run_loocv.py  run_preprocessing.py
scripts/: cellphonedb_postprocessing.R  cellphonedb_preprocessing.R  figures_generation.R  kstat.R  mouse_e15.5d_kidney.R  mouse_e15.5d_kidney_og_stat.R  mouse_e18.5d_kidney.R  mouse_e18.5d_kidney_og_stat.R  mouse_e18.5d_kidney_visualization.R  mouse_e18.5d_ligand_receptor.R  mouse_p3d_kidney.R  mouse_p3d_kidney_og_stat.R
sql/: cellphonedb_mysql.sql  ligand_receptor_query.sql
stan/: threshold_model.stan
