[project]
name = "kstat"
version = "0.1.0"
description = "Probabilistic modeling tools with sparse soft assignment"
authors = [
  { name = "Christopher Chaney", email = "christopher.chaney@utsouthwestern.edu" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "torch",
  "pyro-ppl",
  "scikit-learn",
  "scipy",
  "tqdm",
  "geomloss",
  "anndata",
  "pandas",
  "scikit-image",
  "omnipose"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8",
  "isort"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kstat"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
